apps/app1/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app1 

---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
