apps/app1/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: app1
spec:
  selector:
    app: app1
  ports:
  - port: 3000
