apps/app1/base/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app1
  namespace: app1
spec:
  to:
    kind: Service
    name: app1
